2010-05-10  Dirk Pranke  <dpranke@chromium.org>

        Reviewed by David Levin.

        Re-attempt to fix 38616 - newline handling in new-run-webkit-tests.
        I didn't handle some cases correctly before and the solution was
        confusing. The new patch assumes all calls to the printing module
        don't have newlines, and will append newlines where necessary, just
        like logging does.

        https://bugs.webkit.org/show_bug.cgi?id=38790

        * Scripts/webkitpy/layout_tests/layout_package/metered_stream.py:
        * Scripts/webkitpy/layout_tests/layout_package/metered_stream_unittest.py:
        * Scripts/webkitpy/layout_tests/layout_package/printing.py:
        * Scripts/webkitpy/layout_tests/layout_package/printing_unittest.py:
        * Scripts/webkitpy/layout_tests/run_webkit_tests_unittest.py:

2010-05-10  Kent Tamura  <tkent@chromium.org>

        Reviewed by Adam Barth.

        Make tkent a reviewer
        https://bugs.webkit.org/show_bug.cgi?id=38875

        * Scripts/webkitpy/common/config/committers.py:

2010-05-07  Jon Honeycutt  <jhoneycutt@apple.com>

        Crash closing window containing Flash plug-in
        https://bugs.webkit.org/show_bug.cgi?id=38797
        <rdar://problem/7935266>

        Reviewed by Eric Seidel.

        * DumpRenderTree/TestNetscapePlugIn.subproj/PluginObject.cpp:
        (pluginAllocate):
        Initialize new member to false.

        * DumpRenderTree/TestNetscapePlugIn.subproj/PluginObject.h:
        Added a new member.

        * DumpRenderTree/win/TestNetscapePlugin/main.cpp:
        (NPP_New):
        Check whether the element has the "testGetURLOnDestroy" attribute, and
        record that.
        (NPP_Destroy):
        If "testGetURLOnDestroy" is set, perform a load while destroying the
        plug-in.

2010-05-10  Eric Seidel  <eric@webkit.org>

        Reviewed by David Levin.

        Executive.kill_* do not work with windows python